tests/src/snapshots/fe_compiler_tests__analysis__case_009_call_statement_with_args_2.snap
---
source: tests/src/analysis.rs
expression: "build_snapshot(fixture, &src, &context)"

---
ModuleAttributes {
    type_defs: {
        "Foo": Contract(
            Contract {
                name: "Foo",
                functions: [
                    FunctionAttributes {
                        is_public: true,
                        name: "bar",
                        params: [],
                        return_type: Base(
                            Numeric(
                                U256,
                            ),
                        ),
                    },
                ],
            },
        ),
    },
    tuples_used: {},
}

note: 
  ┌─ features/call_statement_with_args_2.fe:5:9
  │
5 │         self.baz[0] = val
  │         ^^^^^^^^ attributes hash: 11084999791471164417
  │
  = ExpressionAttributes {
        typ: Map(
            Map {
                key: Numeric(
                    U256,
                ),
                value: Base(
                    Numeric(
                        U256,
                    ),
                ),
            },
        ),
        location: Storage {
            nonce: Some(
                0,
            ),
        },
        move_location: None,
    }

note: 
  ┌─ features/call_statement_with_args_2.fe:5:18
  │
5 │         self.baz[0] = val
  │                  ^ attributes hash: 16797824492585953824
  │
  = ExpressionAttributes {
        typ: Base(
            Numeric(
                U256,
            ),
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/call_statement_with_args_2.fe:5:9
  │
5 │         self.baz[0] = val
  │         ^^^^^^^^^^^ attributes hash: 5973407925075462624
  │
  = ExpressionAttributes {
        typ: Base(
            Numeric(
                U256,
            ),
        ),
        location: Storage {
            nonce: None,
        },
        move_location: None,
    }

note: 
  ┌─ features/call_statement_with_args_2.fe:5:23
  │
5 │         self.baz[0] = val
  │                       ^^^ attributes hash: 16797824492585953824
  │
  = ExpressionAttributes {
        typ: Base(
            Numeric(
                U256,
            ),
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/call_statement_with_args_2.fe:6:16
  │
6 │         return val
  │                ^^^ attributes hash: 16797824492585953824
  │
  = ExpressionAttributes {
        typ: Base(
            Numeric(
                U256,
            ),
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/call_statement_with_args_2.fe:9:21
  │
9 │         self.assign(100)
  │                     ^^^ attributes hash: 16797824492585953824
  │
  = ExpressionAttributes {
        typ: Base(
            Numeric(
                U256,
            ),
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/call_statement_with_args_2.fe:9:9
  │
9 │         self.assign(100)
  │         ^^^^^^^^^^^^^^^^ attributes hash: 16797824492585953824
  │
  = ExpressionAttributes {
        typ: Base(
            Numeric(
                U256,
            ),
        ),
        location: Value,
        move_location: None,
    }

note: 
   ┌─ features/call_statement_with_args_2.fe:10:16
   │
10 │         return self.baz[0]
   │                ^^^^^^^^ attributes hash: 11084999791471164417
   │
   = ExpressionAttributes {
         typ: Map(
             Map {
                 key: Numeric(
                     U256,
                 ),
                 value: Base(
                     Numeric(
                         U256,
                     ),
                 ),
             },
         ),
         location: Storage {
             nonce: Some(
                 0,
             ),
         },
         move_location: None,
     }

note: 
   ┌─ features/call_statement_with_args_2.fe:10:25
   │
10 │         return self.baz[0]
   │                         ^ attributes hash: 16797824492585953824
   │
   = ExpressionAttributes {
         typ: Base(
             Numeric(
                 U256,
             ),
         ),
         location: Value,
         move_location: None,
     }

note: 
   ┌─ features/call_statement_with_args_2.fe:10:16
   │
10 │         return self.baz[0]
   │                ^^^^^^^^^^^ attributes hash: 9781479072077703403
   │
   = ExpressionAttributes {
         typ: Base(
             Numeric(
                 U256,
             ),
         ),
         location: Storage {
             nonce: None,
         },
         move_location: Some(
             Value,
         ),
     }

note: 
  ┌─ features/call_statement_with_args_2.fe:4:5
  │  
4 │ ╭     def assign(val: u256) -> u256:
5 │ │         self.baz[0] = val
6 │ │         return val
  │ ╰──────────────────^ attributes hash: 9713682623118008277
  │  
  = FunctionAttributes {
        is_public: false,
        name: "assign",
        params: [
            (
                "val",
                Base(
                    Numeric(
                        U256,
                    ),
                ),
            ),
        ],
        return_type: Base(
            Numeric(
                U256,
            ),
        ),
    }

note: 
   ┌─ features/call_statement_with_args_2.fe:8:5
   │  
 8 │ ╭     pub def bar() -> u256:
 9 │ │         self.assign(100)
10 │ │         return self.baz[0]
   │ ╰──────────────────────────^ attributes hash: 2041944711719443549
   │  
   = FunctionAttributes {
         is_public: true,
         name: "bar",
         params: [],
         return_type: Base(
             Numeric(
                 U256,
             ),
         ),
     }

note: 
   ┌─ features/call_statement_with_args_2.fe:1:1
   │  
 1 │ ╭ contract Foo:
 2 │ │     baz: map<u256, u256>
 3 │ │ 
 4 │ │     def assign(val: u256) -> u256:
   · │
 9 │ │         self.assign(100)
10 │ │         return self.baz[0]
   │ ╰──────────────────────────^ attributes hash: 16417315723405128961
   │  
   = ContractAttributes {
         public_functions: [
             FunctionAttributes {
                 is_public: true,
                 name: "bar",
                 params: [],
                 return_type: Base(
                     Numeric(
                         U256,
                     ),
                 ),
             },
         ],
         init_function: None,
         events: [],
         list_expressions: {},
         string_literals: {},
         structs: [],
         external_contracts: [],
         created_contracts: {},
     }

note: 
  ┌─ features/call_statement_with_args_2.fe:9:9
  │
9 │         self.assign(100)
  │         ^^^^^^^^^^^ attributes hash: 15094834859003080759
  │
  = SelfAttribute {
        func_name: "assign",
    }

note: 
  ┌─ features/call_statement_with_args_2.fe:4:21
  │
4 │     def assign(val: u256) -> u256:
  │                     ^^^^ attributes hash: 17942395924573474124
  │
  = Base(
        Numeric(
            U256,
        ),
    )

note: 
  ┌─ features/call_statement_with_args_2.fe:4:30
  │
4 │     def assign(val: u256) -> u256:
  │                              ^^^^ attributes hash: 17942395924573474124
  │
  = Base(
        Numeric(
            U256,
        ),
    )

note: 
  ┌─ features/call_statement_with_args_2.fe:8:22
  │
8 │     pub def bar() -> u256:
  │                      ^^^^ attributes hash: 17942395924573474124
  │
  = Base(
        Numeric(
            U256,
        ),
    )

note: 
  ┌─ features/call_statement_with_args_2.fe:2:14
  │
2 │     baz: map<u256, u256>
  │              ^^^^ attributes hash: 17942395924573474124
  │
  = Base(
        Numeric(
            U256,
        ),
    )

note: 
  ┌─ features/call_statement_with_args_2.fe:2:20
  │
2 │     baz: map<u256, u256>
  │                    ^^^^ attributes hash: 17942395924573474124
  │
  = Base(
        Numeric(
            U256,
        ),
    )

note: 
  ┌─ features/call_statement_with_args_2.fe:2:10
  │
2 │     baz: map<u256, u256>
  │          ^^^^^^^^^^^^^^^ attributes hash: 3210256860376722957
  │
  = Map(
        Map {
            key: Numeric(
                U256,
            ),
            value: Base(
                Numeric(
                    U256,
                ),
            ),
        },
    )


